src/content/display/style/error.styl
@import 'common.styl';

.container {
    width: 100%;
    height: 100%;    
    text-align: center;    
    display: flex;
    align-items: center;
    flex-direction: column;
    justify-content: center;
	justify-items: center;

    .icon {
        text-align: center;
        width: 150px;
        height: 150px;
    }

    .content {
        margin: 10% 5%;
    }
}

#icon-failure {
    display: block;
    cursor: auto;
    svg {
        fill: #dd5145;
        width: 150px;
        height: 150px;
        :hover{
            fill: #dd5145;
        }
    }
}

